# CtCI

./: .gitignore  CMakeLists.txt  readme.md
include/: 1.1.h  1.2.h  2.1.h  2.2.h  2.4.h  3.2.h  3.3.h
src/: 1.1.cpp  1.2.cpp  2.1.cpp  2.2.cpp  2.3.cpp  2.4.cpp  3.1.cpp  3.2.cpp  3.3.cpp  CMakeLists.txt  template.cpp
src/python/: test_04_01.py  test_04_02.py  test_8_02.py
test/: 1.1test.cpp  1.2test.cpp  2.1test.cpp  2.2.out  2.2test.cpp  2.4test.cpp  3.2test.cpp  3.3test.cpp  CMakeLists.txt  a.out  readme.md
